# docx-to-pdf

./: Cargo.toml  Readme.md  input2.docx
src/: docx_reader.rs  main.rs  pdf_writer.rs  utils.rs
test/: input.docx
